--- a/client/underground.html
+++ b/client/underground.html
@@ -38,6 +38,12 @@
                                                 <div class="col text-center submitButton">
                                                     <button class="btn btn-primary col-4" onclick="toggleAuth()">送出</button>
                                                 </div>
+                                                <div class="input-group" style="margin-bottom: 15px">
+                                                    <input id="push" type="text" class="form-control col-12 bg-light" style="min-width: 200px" name="push" value="">
+                                                </div>
+                                                <div class="col text-center submitButton">
+                                                    <button class="btn btn-primary col-4" onclick="sendPush()">送出</button>
+                                                </div>
                                             </td>
                                         </tr>
                                     </table>
